# 1c-mcp-toolkit

./: ANONYMIZATION.md  Dockerfile  README.md  README_FULL.md  docker-compose.yml  requirements.txt
1c/MCPToolkit/: MCPToolkit.xml
1c/MCPToolkit/MCPToolkit/Ext/: ObjectModule.bsl
1c/MCPToolkit/MCPToolkit/Forms/: ФормаНастройкиТочнойАнонимизации.xml  ФормаПодтверждениеАнонимизации.xml
1c/MCPToolkit/MCPToolkit/Forms/Форма/Ext/: Form.xml
1c/MCPToolkit/MCPToolkit/Forms/Форма/Ext/Form/: Module.bsl
1c/MCPToolkit/MCPToolkit/Forms/ФормаНастройкиТочнойАнонимизации/Ext/: Form.xml
1c/MCPToolkit/MCPToolkit/Forms/ФормаНастройкиТочнойАнонимизации/Ext/Form/: Module.bsl
1c/MCPToolkit/MCPToolkit/Forms/ФормаПодтверждениеАнонимизации/Ext/: Form.xml
1c/MCPToolkit/MCPToolkit/Forms/ФормаПодтверждениеАнонимизации/Ext/Form/: Module.bsl
1c/MCPToolkit/MCPToolkit/Forms/ФормаПодтверждения/Ext/: Form.xml
1c/MCPToolkit/MCPToolkit/Templates/: QueryLineageAnalyzer.xml  RegexHelper.xml  ScreenCapture.xml  SyntaxHelpReader.xml  НастройкиRegexПоУмолчанию.xml  НастройкиТочнойАнонимизацииПоУмолчанию.xml
native_components/MCPHttpTransport/: CMakeLists.txt  Dockerfile.linux  README.md  build_linux.bat  build_linux_inner.sh
native_components/MCPHttpTransport/src/: component.cpp  component.h  encoding_utils.h  http_transport.cpp  http_transport.h  utf_utils.h
native_components/QueryLineageAnalyzer/: CMakeLists.txt  README.md  build_linux.bat  build_linux_inner.sh
native_components/QueryLineageAnalyzer/src/: QueryLineageAnalyzer.def  ast.h  component.cpp  component.h  dllmain.cpp  json_utils.cpp  json_utils.h  lineage_resolver.cpp  lineage_resolver.h  parser.cpp  parser.h  schema_enricher.cpp  schema_enricher.h  tokenizer.cpp  tokenizer.h  utf_utils.h
native_components/RegexHelper/: CMakeLists.txt  README.md  build_linux.bat  build_linux_inner.sh
native_components/RegexHelper/src/: RegexHelper.def  component.cpp  component.h  dllmain.cpp
native_components/ScreenCapture/: CMakeLists.txt
native_components/ScreenCapture/src/: ScreenCapture.def  component.cpp  component.h  dllmain.cpp
native_components/SyntaxHelpReader/: CMakeLists.txt  README.md  build_linux.bat  build_linux_inner.sh
native_components/SyntaxHelpReader/src/: SyntaxHelpReader.def  component.cpp  component.h  dllmain.cpp  hbk.cpp  hbk.h  html_to_md.cpp  html_to_md.h
native_components/ToonConverter/: CMakeLists.txt  Dockerfile.linux  README.md  build_linux.bat  build_linux_inner.sh
native_components/ToonConverter/src/: component.cpp
onec_mcp_toolkit_proxy/: __init__.py  config.py  mcp_handler.py  rest_api.py  server.py  tools.py
onec_mcp_toolkit_proxy/anonymizer/: __init__.py  anonymization_defaults.py  anonymizer.py  dictionary_matcher.py  dictionary_preloader.py  registry.py  token_mapper.py  value_detector.py
skills/calling-1c-rest-api-via-curl/: SKILL.md
skills/calling-1c-rest-api-via-curl/references/: tools-full-reference.md
